sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:7: error: '(' expected but identifier found.
      if plusPetit(i,i+1) {
         ^AlgBubbleSort1:11: error: illegal start of simple expression
    }
    ^